WIP of xrAI and xrSE_Factory. Use an external load mechanism for STextureParams.

--- a/src/utils/xrAI/xrAI.vcxproj
+++ b/src/utils/xrAI/xrAI.vcxproj
@@ -154,6 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Layers\xrRender\ETextureParams.cpp" />
     <ClCompile Include="..\..\xrEngine\xrLoadSurface.cpp" />
     <ClCompile Include="..\..\xrServerEntities\alife_human_brain.cpp" />
     <ClCompile Include="..\..\xrServerEntities\alife_monster_brain.cpp" />
@@ -191,6 +192,7 @@
     <ClCompile Include="xr_graph_merge.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Layers\xrRender\ETextureParams.h" />
     <ClInclude Include="..\..\xrServerEntities\alife_human_brain.h" />
     <ClInclude Include="..\..\xrServerEntities\alife_human_brain_inline.h" />
     <ClInclude Include="..\..\xrServerEntities\alife_monster_brain.h" />
