Move xr_hash_map into separate file

--- a/src/Common/Common.vcxproj.filters
+++ b/src/Common/Common.vcxproj.filters
@@ -79,6 +79,9 @@
       <Filter>xrCommon</Filter>
     </ClInclude>
     <ClInclude Include="Common.hpp" />
+    <ClInclude Include="..\xrCommon\xr_unordered_map.h">
+      <Filter>xrCommon</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NvMender2003">
