--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="..\xrCommon\xr_set.h" />
     <ClInclude Include="..\xrCommon\xr_stack.h" />
     <ClInclude Include="..\xrCommon\xr_string.h" />
+    <ClInclude Include="..\xrCommon\xr_unordered_map.h" />
     <ClInclude Include="..\xrCommon\xr_vector.h" />
     <ClInclude Include="Common.hpp" />
     <ClInclude Include="Compiler.inl" />
