--- a/Externals/ODE.vcxproj.filters
+++ b/Externals/ODE.vcxproj.filters
@@ -14,242 +14,242 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\ode\src\array.h">
+    <ClInclude Include="ode\ode\src\array.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\Bounder33.h">
+    <ClInclude Include="ode\ode\src\Bounder33.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\collision.h">
+    <ClInclude Include="ode\include\ode\collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\collision_kernel.h">
+    <ClInclude Include="ode\ode\src\collision_kernel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\collision_space.h">
+    <ClInclude Include="ode\include\ode\collision_space.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\collision_space_internal.h">
+    <ClInclude Include="ode\ode\src\collision_space_internal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\collision_std.h">
+    <ClInclude Include="ode\ode\src\collision_std.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\collision_transform.h">
+    <ClInclude Include="ode\ode\src\collision_transform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\collision_trimesh.h">
+    <ClInclude Include="ode\include\ode\collision_trimesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\collision_trimesh_internal.h">
+    <ClInclude Include="ode\ode\src\collision_trimesh_internal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\collision_util.h">
+    <ClInclude Include="ode\ode\src\collision_util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\geom_internal.h">
+    <ClInclude Include="ode\ode\src\geom_internal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\joint.h">
+    <ClInclude Include="ode\ode\src\joint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\lcp.h">
+    <ClInclude Include="ode\ode\src\lcp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\mat.h">
+    <ClInclude Include="ode\ode\src\mat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\objects.h">
+    <ClInclude Include="ode\ode\src\objects.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\obstack.h">
+    <ClInclude Include="ode\ode\src\obstack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\odecpp_collision.h">
+    <ClInclude Include="ode\include\ode\odecpp_collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\quickstep.h">
+    <ClInclude Include="ode\ode\src\quickstep.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\stack.h">
+    <ClInclude Include="ode\ode\src\stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\step.h">
+    <ClInclude Include="ode\ode\src\step.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\StepJointInternal.h">
+    <ClInclude Include="ode\ode\src\StepJointInternal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\testing.h">
+    <ClInclude Include="ode\ode\src\testing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\common.h">
+    <ClInclude Include="ode\include\ode\common.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\compatibility.h">
+    <ClInclude Include="ode\include\ode\compatibility.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\config.h">
+    <ClInclude Include="ode\include\ode\config.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\contact.h">
+    <ClInclude Include="ode\include\ode\contact.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\error.h">
+    <ClInclude Include="ode\include\ode\error.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\export-dif.h">
+    <ClInclude Include="ode\include\ode\export-dif.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\geom.h">
+    <ClInclude Include="ode\include\ode\geom.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\mass.h">
+    <ClInclude Include="ode\include\ode\mass.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\matrix.h">
+    <ClInclude Include="ode\include\ode\matrix.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\memory.h">
+    <ClInclude Include="ode\include\ode\memory.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\misc.h">
+    <ClInclude Include="ode\include\ode\misc.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\objects.h">
+    <ClInclude Include="ode\include\ode\objects.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\ode.h">
+    <ClInclude Include="ode\include\ode\ode.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\odecpp.h">
+    <ClInclude Include="ode\include\ode\odecpp.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\odemath.h">
+    <ClInclude Include="ode\include\ode\odemath.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\rotation.h">
+    <ClInclude Include="ode\include\ode\rotation.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\space.h">
+    <ClInclude Include="ode\include\ode\space.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ode\timer.h">
+    <ClInclude Include="ode\include\ode\timer.h">
       <Filter>Shared Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="de_padf_integration.h">
+    <ClInclude Include="ode\contrib\msvc7\ode_default\de_padf_integration.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\Lcp33.h">
+    <ClInclude Include="ode\ode\src\Lcp33.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ode\src\util.h">
+    <ClInclude Include="ode\ode\src\util.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\ode\src\array.cpp">
+    <ClCompile Include="ode\ode\src\array.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\Bounder33.cpp">
+    <ClCompile Include="ode\ode\src\Bounder33.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\collision_kernel.cpp">
+    <ClCompile Include="ode\ode\src\collision_kernel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\collision_quadtreespace.cpp">
+    <ClCompile Include="ode\ode\src\collision_quadtreespace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\collision_space.cpp">
+    <ClCompile Include="ode\ode\src\collision_space.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\collision_std.cpp">
+    <ClCompile Include="ode\ode\src\collision_std.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\collision_transform.cpp">
+    <ClCompile Include="ode\ode\src\collision_transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\collision_util.cpp">
+    <ClCompile Include="ode\ode\src\collision_util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="de_padf_integration.cpp">
+    <ClCompile Include="ode\contrib\msvc7\ode_default\de_padf_integration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\error.cpp">
+    <ClCompile Include="ode\ode\src\error.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\export-dif.cpp">
+    <ClCompile Include="ode\ode\src\export-dif.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\fastdot.c">
+    <ClCompile Include="ode\ode\src\fastdot.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\fastldlt.c">
+    <ClCompile Include="ode\ode\src\fastldlt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\fastlsolve.c">
+    <ClCompile Include="ode\ode\src\fastlsolve.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\fastltsolve.c">
+    <ClCompile Include="ode\ode\src\fastltsolve.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\joint.cpp">
+    <ClCompile Include="ode\ode\src\joint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\lcp.cpp">
+    <ClCompile Include="ode\ode\src\lcp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\mass.cpp">
+    <ClCompile Include="ode\ode\src\mass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\mat.cpp">
+    <ClCompile Include="ode\ode\src\mat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\matrix.cpp">
+    <ClCompile Include="ode\ode\src\matrix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\memory.cpp">
+    <ClCompile Include="ode\ode\src\memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\misc.cpp">
+    <ClCompile Include="ode\ode\src\misc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\obstack.cpp">
+    <ClCompile Include="ode\ode\src\obstack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\ode.cpp">
+    <ClCompile Include="ode\ode\src\ode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\odemath.cpp">
+    <ClCompile Include="ode\ode\src\odemath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\quickstep.cpp">
+    <ClCompile Include="ode\ode\src\quickstep.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\rotation.cpp">
+    <ClCompile Include="ode\ode\src\rotation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\step.cpp">
+    <ClCompile Include="ode\ode\src\step.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\stepfast.cpp">
+    <ClCompile Include="ode\ode\src\stepfast.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\StepJointInternal.cpp">
+    <ClCompile Include="ode\ode\src\StepJointInternal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\testing.cpp">
+    <ClCompile Include="ode\ode\src\testing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\timer.cpp">
+    <ClCompile Include="ode\ode\src\timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ode\src\util.cpp">
+    <ClCompile Include="ode\ode\src\util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\config\msvcdefs.def">
+    <None Include="ode\config\msvcdefs.def">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
